@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Fixed bug #30244: Crash with some map sizes in minimap (Francois Beerten)
 - Added Clover map (Michiel van der Wulp)
 - Added Gosh patches (Tejay Penfold)
 - Added Shipyard (Tejay Penfold and Francois Beerten)
